# wenwen_bot

./: .env.dev  README.md  admins.json  bot.py  config.py  db.sqlite3-shm  db.sqlite3-wal  pyproject.toml
model/: permission.py
models/: __init__.py  orm.py  schedule.py
wenwen_bot/plugins/: help.py  permission.py  schedule.py
