[tool.poetry]
name = "wenwen_bot"
version = "0.1.0"
description = "wenwen_bot"
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
nonebot2 = "^2.0.0-beta.1"
nonebot-adapter-onebot = "^2.1.5"

[tool.poetry.dev-dependencies]
nb-cli = "^0.6.0"

[tool.nonebot]
plugins = ["nonebot_plugin_tortoise_orm", "nonebot_plugin_apscheduler"]
plugin_dirs = ["wenwen_bot/plugins"]

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
